--- a/VR EscapeRoom/Assembly-CSharp.csproj
+++ b/VR EscapeRoom/Assembly-CSharp.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Assets\AssetStore\StereoPortalsVR\Scripts\VRMirror.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\BezierCurve.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\LaunchProjectile.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\Screenshot.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\DestroyObject.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\VideoTimeScrubControl.cs" />
     <Compile Include="Assets\AssetStore\Keypad\Scripts\KeypadInteractionFPV.cs" />
