--- a/VR EscapeRoom/Assembly-CSharp.csproj
+++ b/VR EscapeRoom/Assembly-CSharp.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Assets\LeanTween\Framework\LeanTween.cs" />
     <Compile Include="Assets\LeanTween\Framework\LeanSmooth.cs" />
     <Compile Include="Assets\EscapeRoom\Scripts\Screenshot.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\Pedestal.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\DestroyObject.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\VideoTimeScrubControl.cs" />
     <Compile Include="Assets\AssetStore\Keypad\Scripts\KeypadInteractionFPV.cs" />
