--- a/VR EscapeRoom/Assembly-CSharp.csproj
+++ b/VR EscapeRoom/Assembly-CSharp.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Assets\VRTemplateAssets\Scripts\XRPokeFollowAffordanceFill.cs" />
     <Compile Include="Assets\AssetStore\Keypad\Scripts\KeypadButton.cs" />
     <Compile Include="Assets\EscapeRoom\Scripts\EnableButton.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\RiddlePedestal.cs" />
     <Compile Include="Assets\EscapeRoom\Scripts\SafePathGenerator.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\BezierCurve.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\LaunchProjectile.cs" />
@@ -84,7 +85,6 @@
     <Compile Include="Assets\EscapeRoom\Scripts\SphereKinematicControl.cs" />
     <Compile Include="Assets\EscapeRoom\Scripts\RandomSphereNumbers.cs" />
     <Compile Include="Assets\EscapeRoom\Scripts\Screenshot.cs" />
-    <Compile Include="Assets\EscapeRoom\Scripts\Pedestal.cs" />
     <Compile Include="Assets\EscapeRoom\Scripts\PathHintDisplay.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\DestroyObject.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\VideoTimeScrubControl.cs" />
@@ -99,6 +99,7 @@
     <Compile Include="Assets\AssetStore\Keypad\Scripts\SlidingDoor.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\StepManager.cs" />
     <Compile Include="Assets\LeanTween\Framework\LTSeq.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\GameManager.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\AnchorVisuals.cs" />
   </ItemGroup>
   <ItemGroup>
