Working lights + final room left

--- a/VR EscapeRoom/Assembly-CSharp.csproj
+++ b/VR EscapeRoom/Assembly-CSharp.csproj
@@ -67,28 +67,27 @@
     <Compile Include="Assets\VRTemplateAssets\Scripts\Rotator.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\XRKnob.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\BooleanToggleVisualsController.cs" />
-    <Compile Include="Assets\EscapeRoom\Scripts\CheckNumbers.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\RayAttachModifier.cs" />
     <Compile Include="Assets\EscapeRoom\Scripts\AutomaticDoor.cs" />
     <Compile Include="Assets\EscapeRoom\Scripts\MenuUI.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\XRPokeFollowAffordanceFill.cs" />
     <Compile Include="Assets\AssetStore\Keypad\Scripts\KeypadButton.cs" />
-    <Compile Include="Assets\EscapeRoom\Scripts\EnableButton.cs" />
-    <Compile Include="Assets\EscapeRoom\Scripts\RiddlePedestal.cs" />
-    <Compile Include="Assets\EscapeRoom\Scripts\SafePathGenerator.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\BezierCurve.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\TilesRoom\TileInteraction.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\LaunchProjectile.cs" />
-    <Compile Include="Assets\EscapeRoom\Scripts\HideAllTiles.cs" />
-    <Compile Include="Assets\EscapeRoom\Scripts\TileInteraction.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\TilesRoom\SafePathGenerator.cs" />
     <Compile Include="Assets\LeanTween\Framework\LeanTween.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\TilesRoom\EnableButton.cs" />
     <Compile Include="Assets\LeanTween\Framework\LeanSmooth.cs" />
-    <Compile Include="Assets\EscapeRoom\Scripts\SphereKinematicControl.cs" />
-    <Compile Include="Assets\EscapeRoom\Scripts\RandomSphereNumbers.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\Managers\RiddlersRoomManager.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\TilesRoom\HideAllTiles.cs" />
     <Compile Include="Assets\EscapeRoom\Scripts\Screenshot.cs" />
-    <Compile Include="Assets\EscapeRoom\Scripts\PathHintDisplay.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\DestroyObject.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\VideoTimeScrubControl.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\NumbersRoom\SphereKinematicControl.cs" />
     <Compile Include="Assets\AssetStore\Keypad\Scripts\KeypadInteractionFPV.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\RiddlersRoom\RiddlePedestal.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\TilesRoom\PathHintDisplay.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\Callout.cs" />
     <Compile Include="Assets\LeanTween\Framework\LeanTweenExt.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\CalloutGazeController.cs" />
@@ -96,11 +95,17 @@
     <Compile Include="Assets\LeanTween\Framework\LTDescrOptional.cs" />
     <Compile Include="Assets\AssetStore\Keypad\Scripts\Keypad.cs" />
     <Compile Include="Assets\LeanTween\Framework\LTDescr.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\Managers\GameManager.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\TilesRoom\TilesRoomButton.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\Managers\TilesRoomManager.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\Managers\FinalRoomManager.cs" />
     <Compile Include="Assets\AssetStore\Keypad\Scripts\SlidingDoor.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\Managers\NumbersRoomManager.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\StepManager.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\NumbersRoom\RandomSphereNumbers.cs" />
     <Compile Include="Assets\LeanTween\Framework\LTSeq.cs" />
-    <Compile Include="Assets\EscapeRoom\Scripts\GameManager.cs" />
     <Compile Include="Assets\VRTemplateAssets\Scripts\AnchorVisuals.cs" />
+    <Compile Include="Assets\EscapeRoom\Scripts\NumbersRoom\CheckNumbers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
